# SilkRoad-EcoVision

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  logs.dinov2-vitg-518.txt  logs.dinov2-vitg-reg4-518.txt  logs.dinov2-vitl-reg4-518.txt  logs.dinov3-vithplus-896.timm.txt  logs.dinov3-vitl-1024.timm.txt  logs.dinov3-vitl-896-timm.h200.txt  main.py  pyproject.toml
artifacts/server/ensemble-analysis-h200/: best_by_size.csv  combination_metrics.csv  combination_scores.csv
artifacts/server/ensemble-analysis-h200-plus896/: best_by_size.csv  combination_metrics.csv  combination_scores.csv
artifacts/server/teacher-selection-h200/: teacher_correlations.csv  teacher_selection.csv
artifacts/server/teacher-selection-h200-plus896/: teacher_correlations.csv  teacher_selection.csv
configs/: infer-ensemble.yaml  pseudo-online.yaml  supervised-local-debug.yaml  supervised-local-strong.yaml  supervised-vitl.yaml
configs/archive/torchhub/: supervised-dinov3-vitl-1024.yaml  supervised-dinov3-vitl-896.yaml  supervised-vitl.yaml
configs/server/: supervised-dinov2-vitg-518.yaml  supervised-dinov2-vitg-reg4-518.yaml  supervised-dinov2-vitl-518.yaml  supervised-dinov2-vitl-reg4-518.yaml  supervised-dinov3-vithplus-896-timm.yaml  supervised-dinov3-vitl-1024-modelscope.yaml  supervised-dinov3-vitl-1024-timm.yaml  supervised-dinov3-vitl-1024.yaml  supervised-dinov3-vitl-896-modelscope.yaml  supervised-dinov3-vitl-896-timm.yaml  supervised-dinov3-vitl-896.yaml  supervised-siglip-so400m-384.yaml  supervised-siglip-so400m-448.yaml  supervised-siglip-so400m-gap-448.yaml  supervised-siglip-so400m-gap-896.yaml
docs/: csiro-winner-review-plan.zh.md  hailo8-distillation-report.md  hailo8-distillation-report.zh.md  hf_dataset_card_template.md  huggingface.zh.md  reproduction.md  server-experiments-summary.csv  server-experiments.zh.md  server-training.md  server-training.zh.md  xinjiang-data-collection-plan.zh.md
scripts/: analyze_oof_ensemble.py  calibrate_third_place_postprocess.py  hf_download_prefix.py  hf_download_snapshot.py  hf_upload.sh  infer.py  prepare_data.py  train_modelscope_dinov3.sh  train_pseudo.py  train_supervised.py  train_timm_dinov3.sh
src/csiro_biomass/: __init__.py
src/csiro_biomass/cli/: main.py
src/csiro_biomass/data/: constants.py  dataset.py  (+1 more)
tests/: test_backbone_image_size.py  test_constrained_loss.py  test_manifest_validation.py  test_metadata_and_calibration.py  test_oof.py  test_postprocess.py  test_prepare_helpers.py  test_transformers_backbone.py
(+12 files in other folders)
